--- a/Week-3/index.html
+++ b/Week-3/index.html
@@ -1,39 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Matrix Factorization Movie Recommender (TensorFlow.js)</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Matrix Factorization Movie Recommender</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <main class="card">
     <h1>Matrix Factorization Movie Recommender</h1>
+    <p class="subtitle">
+      Train a collaborative filtering model in your browser using TensorFlow.js
+    </p>
 
+    <!-- User and Movie Selection -->
     <div class="controls">
-      <label for="user-select">Select User</label>
+      <label for="user-select">Select User:</label>
       <select id="user-select"></select>
 
-      <label for="movie-select">Select Movie</label>
+      <label for="movie-select">Select Movie:</label>
       <select id="movie-select"></select>
 
-      <div class="actions">
-        <button id="predict-btn" onclick="predictRating()">Predict Rating</button>
-      </div>
+      <button id="predict-btn" onclick="predictRating()">Predict Rating</button>
     </div>
 
-    <div id="result" class="result">
-      Loading data... please wait.
-    </div>
-
-    <footer class="footer">
-      <small>
-        Model trained in-browser with TensorFlow.js using MovieLens 100K (u.data / u.item).
-      </small>
-    </footer>
+    <!-- Results -->
+    <div id="result" class="result">Loading MovieLens data...</div>
   </main>
 
-  <!-- Load TensorFlow.js then our modules -->
+  <!-- TensorFlow.js and local scripts -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
   <script src="data.js"></script>
   <script src="script.js"></script>
